--- a/testdb/Makefile
+++ b/testdb/Makefile
@@ -1,2 +1,2 @@
 testmysql: 	testmysql.c
-	gcc testmysql.c -o testmysql -L/user/lib/mysql -lmysqlclient
+	gcc testmysql.c -Wall -ansi -o testmysql -L/user/lib/mysql -lmysqlclient
