call makefile recursively

--- a/testbison/Makefile
+++ b/testbison/Makefile
@@ -5,11 +5,13 @@ all: 		$(programs)
 	cd acalc && $(MAKE)
 	cd ccalc && $(MAKE)
 	cd rpncalc && $(MAKE)
+	cd testflex && $(MAKE)
 clean:
 	rm -f $(programs) *.c *~
 	cd acalc && $(MAKE) clean
 	cd ccalc && $(MAKE) clean
 	cd rpncalc && $(MAKE) clean
+	cd testflex && $(MAKE) clean
 
 testflex: 	testflex.l
 	flex -o testflex.c testflex.l
