--- a/testdb/Makefile
+++ b/testdb/Makefile
@@ -1,2 +1,5 @@
+all: 		testmysql
+clean: 		
+	rm testmysql *~
 testmysql: 	testmysql.c
 	gcc testmysql.c -Wall -ansi -o testmysql -L/user/lib/mysql -lmysqlclient
