repair replacecommet.l v1 ok

--- a/testbison/testflex/Makefile
+++ b/testbison/testflex/Makefile
@@ -1,4 +1,8 @@
-PRJS=replace nl pascalscan replacecommit
+# Make file for common use of flex
+#  By Kevin Qu at quchunguang@gmail.com
+#  Copyright under GPL
+
+PRJS=replace nl pascalscan replacecommet
 all: 		$(PRJS)
 	
 clean: 		
@@ -11,3 +15,13 @@ $(PRJS): \
 %.tab.c: %.l
 # -i: ignore case
 	flex -o $(@:%.o=%.d) $<
+
+test: 	replace replacecommet
+	@logecho "[INFO] test replace..."
+	@cat replace.data
+	@echo "---------------------------------------------"
+	@./replace < replace.data
+	@logecho "[INFO] test replace..."
+	@cat replacecommet.data
+	@echo "---------------------------------------------"
+	@./replacecommet < replacecommet.data
