--- a/testdb/Makefile
+++ b/testdb/Makefile
@@ -1,5 +1,5 @@
 all: 		testmysql
 clean: 		
-	rm testmysql *~
+	rm -f testmysql *~
 testmysql: 	testmysql.c
 	gcc testmysql.c -Wall -ansi -o testmysql -L/user/lib/mysql -lmysqlclient
