clean unused files in testm/

--- a/testm/Makefile
+++ b/testm/Makefile
@@ -5,4 +5,5 @@ all:
 	make -C /lib/modules/`uname -r`/build SUBDIRS=`pwd` modules
 	#make -C /lib/modules/2.6.31-14-generic/build SUBDIRS=`pwd` modules
 clean:
-	rm -f `find . -name "*.o" -o -name "*.ko" -o -name "*.mod.c"`
+	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions
+	cd m && $(MAKE) clean
