--- a/testtex/Makefile
+++ b/testtex/Makefile
@@ -2,7 +2,7 @@ PDF_PRJS=test1 test2 test3 test4
 
 all: 		$(PDF_PRJS)
 clean:
-	rm -f *.pdf *.log *.aux *.toc
+	rm -f *.pdf *.log *.aux *.toc *.dvi
 
 $(PDF_PRJS): \
 %: 		%.tex
