--- a/testboost/Makefile
+++ b/testboost/Makefile
@@ -3,7 +3,7 @@
 
 BOOST_INCLUDE=~/dev/prj/boost
 BOOST_LIBRARY=$(BOOST_INCLUDE)/stage/lib
-PROJECTS=lambda regex
+PROJECTS=lambda regex foreach
 
 .PHONY: 	clean all
 all: $(PROJECTS)
@@ -14,5 +14,8 @@ lambda: 	lambda.cc
 regex: 		regex.cc
 	g++ -I $(BOOST_INCLUDE) -L $(BOOST_LIBRARY) -lboost_regex regex.cc -o regex
 	#g++ -I $(BOOST_INCLUDE) regex.cc -o regex $(BOOST_LIBRARY)/libboost_regex.a
+foreach: 	foreach.cc
+	g++ -I $(BOOST_INCLUDE) -o $@ $<
+
 test: 		regex
 	./regex < ./jayne.txt
