testm/m commit kernels on 2.6.39.4

--- a/testm/Makefile
+++ b/testm/Makefile
@@ -5,5 +5,5 @@ all:
 	make -C /lib/modules/`uname -r`/build SUBDIRS=`pwd` modules
 	#make -C /lib/modules/2.6.31-14-generic/build SUBDIRS=`pwd` modules
 clean:
-	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c modules.order .tmp_versions
+	rm -rf *.o .*.o.d *~ core .depend .*.cmd *.ko *.mod.c modules.order .tmp_versions
 	cd m && $(MAKE) clean
