--- a/sams_server/senseCrypt_win/generateEncryptLimit/generateEncryptLimit.vcproj
+++ b/sams_server/senseCrypt_win/generateEncryptLimit/generateEncryptLimit.vcproj
@@ -62,6 +62,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)\senseCryptBase64.exe"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -133,7 +134,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				OutputFile="$(OutDir)\senseCryptBase64.exe"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
