--- a/testasm/Makefile
+++ b/testasm/Makefile
@@ -1,6 +1,9 @@
 all: 	test
 clean:
-	rm -f hello hello.o
+	rm -f hello hello.o findmax findmax.o
+findmax: 	findmax.s
+	as -o findmax.o $<
+	ld -o $@ findmax.o
 hello: 	hello.s
 	as -o hello.o $<
 	ld -o $@ hello.o
