--- a/testgo/Makefile
+++ b/testgo/Makefile
@@ -1,3 +1,8 @@
-hello:		hello.go
-	go run hello.go
+all:	install
+install:
+	go install example/hello
+	go install example/newmath
+test:
+	go test example/newmath
 clean:
+	rm -rf pkg bin
