--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -4,9 +4,17 @@ all:
 	cd lightsensor && $(MAKE)
 	cd sw18020p && $(MAKE)
 	cd testnano && $(MAKE)
+	cd dht11 && $(MAKE)
+	cd irtest && $(MAKE)
+	cd liquidcrystal && $(MAKE)
+	cd tone && $(MAKE)
 clean:
 	cd halleffect && $(MAKE) clean
 	cd ledflow && $(MAKE) clean
 	cd lightsensor && $(MAKE) clean
 	cd sw18020p && $(MAKE) clean
 	cd testnano && $(MAKE) clean
+	cd dht11 && $(MAKE) clean
+	cd irtest && $(MAKE) clean
+	cd liquidcrystal && $(MAKE) clean
+	cd tone && $(MAKE) clean
