--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -12,6 +12,8 @@ all:
 	cd ledonboard && $(MAKE)
 	cd hmc5883l && $(MAKE)
 	cd pir && $(MAKE)
+	cd hc_sr04 && $(MAKE)
+	cd led && $(MAKE)
 	## 5f2d225e-a770-4c12-b2b3-c230d5818085
 clean:
 	cd halleffect && $(MAKE) clean
@@ -27,4 +29,6 @@ clean:
 	cd ledonboard && $(MAKE) clean
 	cd hmc5883l && $(MAKE) clean
 	cd pir && $(MAKE) clean
+	cd hc_sr04 && $(MAKE) clean
+	cd led && $(MAKE) clean
 	## b7b86095-2263-46c8-a9c6-52e52760265c
