default board to nano328

--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -14,6 +14,13 @@ all:
 	cd pir && $(MAKE)
 	cd hc_sr04 && $(MAKE)
 	cd led && $(MAKE)
+	cd reading_analog && $(MAKE)
+	cd gps6mv2 && $(MAKE)
+	cd p2p_master && $(MAKE)
+	cd p2p_slave && $(MAKE)
+	cd yl64 && $(MAKE)
+	cd relay && $(MAKE)
+	cd rfid && $(MAKE)
 	## 5f2d225e-a770-4c12-b2b3-c230d5818085
 clean:
 	cd halleffect && $(MAKE) clean
@@ -31,4 +38,11 @@ clean:
 	cd pir && $(MAKE) clean
 	cd hc_sr04 && $(MAKE) clean
 	cd led && $(MAKE) clean
+	cd reading_analog && $(MAKE) clean
+	cd gps6mv2 && $(MAKE) clean
+	cd p2p_master && $(MAKE) clean
+	cd p2p_slave && $(MAKE) clean
+	cd yl64 && $(MAKE) clean
+	cd relay && $(MAKE) clean
+	cd rfid && $(MAKE) clean
 	## b7b86095-2263-46c8-a9c6-52e52760265c
