--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -14,6 +14,7 @@ all:
 	cd pir && $(MAKE)
 	cd hc_sr04 && $(MAKE)
 	cd led && $(MAKE)
+	cd ledflow && $(MAKE)
 	## 5f2d225e-a770-4c12-b2b3-c230d5818085
 clean:
 	cd halleffect && $(MAKE) clean
@@ -31,4 +32,5 @@ clean:
 	cd pir && $(MAKE) clean
 	cd hc_sr04 && $(MAKE) clean
 	cd led && $(MAKE) clean
+	cd ledflow && $(MAKE) clean
 	## b7b86095-2263-46c8-a9c6-52e52760265c
