--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -30,6 +30,7 @@ all:
 	cd nRF24L01 && $(MAKE)
 	cd rf_send && $(MAKE)
 	cd rf_recv && $(MAKE)
+	cd eeprom && $(MAKE)
 	## 5f2d225e-a770-4c12-b2b3-c230d5818085
 clean:
 	cd halleffect && $(MAKE) clean
@@ -63,4 +64,5 @@ clean:
 	cd nRF24L01 && $(MAKE) clean
 	cd rf_send && $(MAKE) clean
 	cd rf_recv && $(MAKE) clean
+	cd eeprom && $(MAKE) clean
 	## b7b86095-2263-46c8-a9c6-52e52760265c
