raspsend.py add update auth info function

--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -31,6 +31,7 @@ all:
 	cd rf_send && $(MAKE)
 	cd rf_recv && $(MAKE)
 	cd eeprom && $(MAKE)
+	cd l298n && $(MAKE)
 	## 5f2d225e-a770-4c12-b2b3-c230d5818085
 clean:
 	cd halleffect && $(MAKE) clean
@@ -65,4 +66,5 @@ clean:
 	cd rf_send && $(MAKE) clean
 	cd rf_recv && $(MAKE) clean
 	cd eeprom && $(MAKE) clean
+	cd l298n && $(MAKE) clean
 	## b7b86095-2263-46c8-a9c6-52e52760265c
