--- a/testarduino/Makefile
+++ b/testarduino/Makefile
@@ -32,6 +32,8 @@ all:
 	cd rf_recv && $(MAKE)
 	cd eeprom && $(MAKE)
 	cd l298n && $(MAKE)
+	cd bolier_ctl && $(MAKE)
+	cd light_pir_light && $(MAKE)
 	## 5f2d225e-a770-4c12-b2b3-c230d5818085
 clean:
 	cd halleffect && $(MAKE) clean
@@ -67,4 +69,6 @@ clean:
 	cd rf_recv && $(MAKE) clean
 	cd eeprom && $(MAKE) clean
 	cd l298n && $(MAKE) clean
+	cd bolier_ctl && $(MAKE) clean
+	cd light_pir_light && $(MAKE) clean
 	## b7b86095-2263-46c8-a9c6-52e52760265c
